Modifying slidy.js so advance on mouse-click is OFF initially, and remove vertical swipe for table of content toggle as it interferes with scrolling down the slide. Looks good on Nexus 7, but too narrow on Galaxy S3

--- a/slidyFiles/slidyGM.css
+++ b/slidyFiles/slidyGM.css
@@ -45,7 +45,7 @@ div.rbox {
   text-align:left;
 }
 
-/* From Dave Raggett's W3 slides */
+/* (initially) from Dave Raggett's W3 slides on htmlSlidy */
 
 div.vbox {
   float: left;
